--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-burger",
     "version": "0.1.0",
     "private": true,
-    "homepage": "./react-burger",
+    "homepage": "./",
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.0",
         "@testing-library/jest-dom": "^5.16.1",
@@ -12,6 +12,8 @@
         "@types/node": "^16.11.20",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
+        "@types/react-router": "^5.1.18",
+        "@types/uuid": "^8.3.4",
         "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
         "react": "^17.0.2",
         "react-dnd": "^15.1.1",
