--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2020",
     "lib": [
       "dom",
       "dom.iterable",
@@ -20,8 +20,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strictNullChecks": false,
-    "useUnknownInCatchVariables": false,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
 
   },
   "include": [
