--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.4.0",
         "@types/node": "^16.11.20",
+        "@types/node-fetch": "^2.6.1",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
         "@types/react-router": "^5.1.18",
