--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strictNullChecks": false,
-    "noImplicitAny": true,
+    // "noImplicitAny": true,
 
   },
   "include": [
